# DBRealtor

./: .env.example  .gitignore  CLAUDE .md  CLAUDE.md  Dockerfile  Readme.md  ReleasePlan.md  SrealityLoadByScaning.py  SrealityScaner.py  alembic.ini  docker-compose.prod.yml  docker-compose.yml  kickoff-prompt.md  prompt-library.md  pyproject.toml  script_sreality_reply.html
.claude/: settings.local.json
Documentation/: ModulsDiagram.ddd  configuration.txt  putty_reg.reg  usefull_queries.sql
Envpreparation/: Vagrantfile  dbrealtor_inicial_creation.sql  install-chromedriver.sh  install.sh
SQL/: dbrealtor_byty.sql  dbrealtor_byty0.sql  report_queries.sql  tables_creation.sql  usefull_queries.sql  usefull_queries2.sql
TempFiles/: 1.html  10.html  11.html  12.html  13.html  14.html  15.html  16.html  17.html  18.html  19.html  2.html  20.html  3.html  4.html  5.html  6.html  7.html  8.html  9.html  Class_to_list.py  DefinePrice.py  Inicial_Env_Test.py  Page_Load_Test.py  Test1.py  TestDB.py  TestDB_small.py  all.txt  all_byty.html  byty.html  byty_najm.html  byty_prodej.html  byty_pronajem.html  info.txt  page.html  simple_save.txt  test.py
WebScraper/: SrealityBytyScanner_v1.py  SrealityBytyScanner_v2.py  SrealityLibrary.py  SrealityLoad_old.py  SrealityManager.py  SrealityScaner.py  SrealityScanner_Byty_Najm.py  SrealityScanner_Byty_Najm_Class.py  SrealityScanner_Byty_Prodej.py  SrealityScanner_Byty_Prodej_Class.py  SrealityScanner_Byty_Pronajem - Copy.py  SrealityScanner_Byty_Pronajem.py  SrealityScanner_Byty_Pronajem_Class.py  SrealityScanner_Domy_Prodej.py  (+14 more)
(+60 files in other folders)
